--- a/index.html
+++ b/index.html
@@ -1,102 +1,137 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Double Robot in Hermitage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
-          rel="stylesheet" type="text/css">
-    <style type="text/css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
 
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800">
+
+    <style type="text/css">
       /* Large desktop */
-      @media (min-width: 980px) { 
-        body {
-         padding-top: 60px;
+      @media (min-width: 980px) 
+      { 
+        body 
+        {
+          padding-top: 60px;
         }
-       .linediv-l {
-         border-right: 1px white solid;
+
+        .linediv-l 
+        {
+          border-right: 1px white solid;
         }
-       .linediv-r {
-         border-left: 1px white solid;
-       }
+
+        .linediv-r 
+        {
+          border-left: 1px white solid;
+        }
       }
 
       /* Landscape phones and down */
-      @media (max-width: 480px) { 
-       .copy {
-         padding: 2.5% 10%;
-       }
-       .linediv-l {
-         border-bottom: 1px white solid;
-       }
-       .linediv-r {
-         border-top: 1px white solid;
-       }
+      @media (max-width: 480px) 
+      { 
+        .copy 
+        {
+          padding: 2.5% 10%;
+        }
+
+        .linediv-l 
+        {
+          border-bottom: 1px white solid;
+        }
+
+        .linediv-r 
+        {
+          border-top: 1px white solid;
+        }
       }
 
       /* All form factors */
 
       /* Main body and headings */
-      body{
+      body
+      {
         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
-      .heading, .subheading {
+
+      .heading, .subheading 
+      {
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
         text-align: center;
       }
-      p.lead {
+
+      p.lead 
+      {
         padding-top: 1.5%;
         font-size: 24px;
         line-height: 30px;
       }
-      p {
+
+      p 
+      {
         font-size: 18px;
         line-height: 24px;
       }
 
       /* Video pitch and Action */
-      .pitch {
+      .pitch 
+      {
         padding: 2.5% 0%;
       }
-      .order {
+
+      .order 
+      {
         padding: 2% 0%;
       }
-      .actions {
+
+      .actions 
+      {
         background-color: #343434;
         padding: 3% 0%;
       }
-      .video, .thermometer, .order, .social, .statistics {
+
+      .video, .thermometer, .order, .social, .statistics 
+      {
         text-align: center;
       }
-      .statistics h3, .statistics p {
+
+      .statistics h3, .statistics p 
+      {
         color: white;
       }
 
       /* Marketing Copy and Footer */
-      .copy {
+      .copy 
+      {
         padding-top: 2.5%;
         padding-bottom: 2.5%;
         text-align: justify;
       }
-      .asset {
+      .asset 
+      {
         padding: 2.5% 0%;
       }
-      .footer {
+
+      .footer 
+      {
         color: #cccccc;
         text-align: center;
       }
-      .footer p {
+
+      .footer p 
+      {
         font-size: 11px;
       }
-      .footer a {
+
+      .footer a 
+      {
         color: #ccccff;
       }
+
     </style>
   </head>
   <body>
@@ -112,10 +147,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Doubles in Hermitage</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a href="#"><i class="icon-home"></i>Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
@@ -133,14 +168,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Doubles in Hermitage</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Rent your personal Hermitage visitor</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -190,6 +225,7 @@
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+            <button class="btn btn-facebook"><i class="icon-vk"></i> | ВКонтакте</button>
           </div>
         </div>
       </div>
@@ -200,7 +236,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://www.doublerobotics.com/img/use-museum.jpg">
         </div>
         <div class="span5 copy">
           <p>
@@ -245,18 +281,18 @@
       <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
       <div class="row-fluid faq">
           <div class="span10 offset1">
-            <h3>FAQ</h3>
+            <h3><i class="icon-question-sign"></i> FAQ</h3>
             <div class="accordion" id="accordion2">
               <div class="accordion-group">
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseOne">
-                    What does FAQ stand for?
+                    Do I need to have my own iPad for Double?
                   </a>
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Frequently Asked Question.
+                    No. Our Doubles fleet if fully equiped and chareged waitind for you. You need only choose vocate one.
                   </div>
                 </div>
               </div>
@@ -290,5 +326,10 @@
         </div>
       </div>
     </div>
+
+    <!-- scripts -->
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+
   </body>
 </html>
